--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "blog-ulric1905",
-  "version": "1.0.0",
-  "description": "Create a blog with a single page listing articles and a form to post a new one.\r An article should have at least the `title` and `content` properties.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NodeCourse/blog-Ulric1905.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/NodeCourse/blog-Ulric1905/issues"
-  },
-  "homepage": "https://github.com/NodeCourse/blog-Ulric1905#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
     "pug": "^2.0.3",
     "sequelize": "^4.37.7"
   },
-  "devDependencies": {}
+  "name": "blog",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
